fix whitespace on < 500px devices

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
     font-optical-sizing: auto;
     font-style: normal;
     color: white;
+    min-width: 550px;
 }
 
 /* @media (min-width: 768px) {
